# dl-climate-models

./: .gitignore  README.md  pyproject.toml  requirements.txt
example_configs/: climax_33vars.yaml  climax_8vars.yaml  fourcastnet_33vars.yaml  fourcastnet_8vars.yaml  sfno_33vars.yaml  sfno_8vars.yaml
example_scripts/: evaluate.sh  hyperparameter_search.sh  preprocessing.sh  train.sh
src/: autoregressive_rollout.py  datamodule.py  metrics.py  modelmodule.py  train.py
src/data_preprocessing/: compute_normalization.py  compute_tisr_heppa.py
src/evaluation/: compute_climatology_metrics.py  evaluate_run.py  plot_metrics.py  plots_per_run.py
src/models/: base_model.py  climax.py  fourcastnet.py  sfno.py
src/utils/: data_utils.py  eval_utils.py  lookup_mappings.py  train_utils.py
